updated tomcat with conf for memory settings